--- a/src/components/Persons/Person/Person.css
+++ b/src/components/Persons/Person/Person.css
@@ -1,4 +1,4 @@
-.person {
+.Person {
     width: 60%;
     margin: auto;
     border: 1px solid #eeeeee;
@@ -8,7 +8,7 @@
 }
 
 @media (min-width: 500px) {
-    .person {
+    .Person {
         width: 450px;
     }
 }
